--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 body
 {
-    background-color: 180deg, #303030, #370028;
+    background-color: 90deg, #303030, #61154d;
 }
 /*CSS pour le logo
  #logo {
