--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,9 @@ a {
     font-family: 'Manrope', sans-serif;
     border-radius: 25%;
     border-color: #b82010;
-    border-left: 1em;
-    border-right: 1em;
-    border-bottom: 3em;
-    background-color: brown;
-
+    border-left: 1em, brown;
+    border-right: 1em, brown;
+    border-bottom: 3em, brown;
 }
 h1 {
  color:#b82010 ;
