--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,13 @@ a {
     color:#f0c300;
     text-decoration: none;
     font-family: 'Manrope', sans-serif;
-    border-radius: 25%;
-    border-color: #b82010;
-    border-left: 1em, brown;
-    border-right: 1em, brown;
-    border-bottom: 3em, brown;
+}
+a:hover {
+    color:#00b8f0;
+    text-decoration: none;
+    font-family: 'Manrope', sans-serif;
+    font-size: 1.5em;
+
 }
 h1 {
  color:#b82010 ;
