--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,7 @@ body
     background-color: #00b8f0;
     max-width: 20%;
     margin:0px;
-    padding: 2%
+    padding: 2%;
+    text-align: justify;
+
 }
