--- a/css/style.css
+++ b/css/style.css
@@ -31,20 +31,20 @@ body
 .First {
     background-color: #b82010;
     text-align: justify;
-    margin:0px;
+margin: auto;
     padding: 2%
 }
 .Second {
     background-color: #00b8f0;
     text-align: justify;
-    margin:0px;
+margin: auto;
     padding: 2%
 }
 .aside
 {
     background-color: #00b8f0;
     max-width: 20%;
-    margin:0px;
+margin: auto;
     padding: 2%;
     text-align: justify;
 
