--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body
 {
     background: linear-gradient(90deg, #303030, #61154d);
 }
-section{
+section {
     margin: 0;
     padding: 0;
 }
@@ -38,7 +38,7 @@ section{
 margin: auto;
 }
 .Second {
-    background-color: #00b8f0;
+    background-color: #00f08c;
     text-align: justify;
 margin: auto;
 
@@ -49,5 +49,4 @@ margin: auto;
     max-width: 20%;
 margin: auto;
     text-align: justify;
-
 }
