--- a/css/style.css
+++ b/css/style.css
@@ -31,22 +31,26 @@ body
 section {
     margin: 0;
     padding: 0;
+    display: block;
+
 }
 .First {
     background-color: #b82010;
     text-align: justify;
-margin: auto;
+    margin: 0;
+
 }
 .Second {
     background-color: #00f08c;
     text-align: justify;
-margin: auto;
+    margin: 0;
+
 
 }
 .aside
 {
     background-color: #00b8f0;
     max-width: 20%;
-margin: auto;
+    margin: 0;
     text-align: justify;
 }
