--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a:hover {
     font-size: 1.5em;
 }
 h1 {
- color:#b82010 ;
+ color:#130301 ;
  font-size: 3.5em;
  font-family:'Montserrat', sans-serif;
 }
